correction IE

--- a/waterquest/assets/css/styles.css
+++ b/waterquest/assets/css/styles.css
@@ -271,6 +271,7 @@ html {
   font-size: 16px;
   height: 100%;
   background: #000;
+  overflow-x: hidden;
 }
 
 html.mac {
